--- a/music/templates/music/post.html
+++ b/music/templates/music/post.html
@@ -1,9 +1,9 @@
-{% extends 'women/base.html' %}
+{% extends 'music/base.html' %}
 
 {% block content %}
 <h1>{{post.title}}</h1>
 
-{% if post.photo%}
+{% if post.photo %}
 <p><img class="img-article-left" src="{{post.photo.url}}"></p>
 {% endif %}
 
