--- a/music/static/music/css/styles.css
+++ b/music/static/music/css/styles.css
@@ -1,3 +1,5 @@
+
+
 html, body {
 	font-family: 'Arial';
 	margin: 0;
@@ -6,6 +8,7 @@ html, body {
 	width: 100%;
 	color: #444;
 }
+
 
 a {
 	color: #0059b2;
@@ -36,7 +39,7 @@ p.link-read-post {
 p.link-read-post a {
 	padding: 10px;
 	min-width: 100px;
-	background: #333671;
+	background: #89b1d5;
 	color: #fff;
 	text-decoration: none;
 }
@@ -76,13 +79,12 @@ ul.list-articles li {
 .clear {clear: both;}
 
 .header {
-	background: #3F4137;
+	background: #89b1d5;
 	height: 60px;
 }
 
-.logo {
-	background: url('../images/logo.png') no-repeat 10px 5px;
-	width: 70px;
+.logo img{
+	width: 60px;
 	height: 60px;
 }
 
@@ -91,7 +93,7 @@ ul.mainmenu {
 	margin: 0;
 	padding: 0;
 	height: 60px;
-	color: #fdc073;
+	color: white;
 	font-size: 20px;
 	overflow: hidden;
 }
@@ -103,11 +105,11 @@ ul.mainmenu li.logo {margin: 0;}
 ul.mainmenu li.last {float: right;}
 
 ul.mainmenu li a {
-	color: #fdc073;
+	color: white;
 	text-decoration: none;
 }
 ul.mainmenu li a:hover {
-	color: #FDA83D;
+	color: #d5d5d5;
 }
 
 .panelitems {
@@ -183,7 +185,7 @@ div.button {
 	color: #444;
 	text-decoration: none;
 }
-.left-chapters ul li a:hover { color: #CC0000; }
+.left-chapters ul li a:hover { color: #0059b2; }
 .left-chapters ul li.share {margin: 60px 0 0 0;}
 .left-chapters ul li.share p {margin: 30px 0 30px 0;}
 .left-chapters ul li.share a {
@@ -355,10 +357,9 @@ ul.lang-list li a:hover {color: #fdc073;}
 
 #footer {
 	box-sizing: border-box;
-
-	background: #3F4137;
+	background: #89b1d5;
 	padding: 5px;
-	color: #aaa;
+	color: white;
 	font-size: 14px;
 	font-family: Verdana, Geneva, Arial, Helvetica;
 	text-align: left;
@@ -366,7 +367,7 @@ ul.lang-list li a:hover {color: #fdc073;}
 }
 #footer a {
 	text-decoration: underline;
-	color: #aaa;
+	color: white;
 }
 
 .form-input {
@@ -389,4 +390,59 @@ ul.lang-list li a:hover {color: #fdc073;}
 .form-button {
     min-width: 200px;
     font-size: 16px;
+}
+
+.list-pages {
+	text-align: center;
+	margin: 0 0 20px 0;
+}
+.list-pages ul {
+	margin: 20px 0 0 0;
+	padding: 0;
+	list-style: none;
+}
+.list-pages ul li {
+	display: inline-block;
+	margin: 0 20px 0 0;
+}
+.list-pages a {
+	color: #000;
+	font-size: 24px;
+	text-decoration: none;
+}
+.list-pages .page-num, .page-num-selected {
+	display: inline-block;
+	width: 60px;
+	height: 44px;
+	padding: 16px 0 0 0;
+	border: 1px solid #d0d0d0;
+	border-radius: 30px;
+}
+.list-pages .page-num:hover {
+	box-shadow: 3px 3px 1px #d0d0d0; 
+}
+.list-pages .page-num-selected {
+	border: none;
+	color: #000;
+	font-size: 20px;
+}
+.list-pages .page-num-selected:hover {
+	box-shadow: none; 
+}
+
+
+button {
+	 border-radius: 8px;
+    width: 200px;
+    height: 50px;
+    background-color:  #89b1d5;
+    padding: 11px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    color: rgba(255, 255, 255, 1);
+    font-family: Poppins, sans-serif;
+    font-weight: 600;
+
 }
