--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,4 +1,4 @@
-{% extends 'women/base.html' %}
+{% extends 'music/base.html' %}
 
 {% block content %}
 <ul class="list-articles">
@@ -9,15 +9,15 @@
 </div>
 
 {% if p.photo %}
-	<p><img class="img-article-left thumb" src="{{p.photo.url}}"></p>
+	<p><img class="img-article-left thumb" width="180" height="160" src="{{p.photo.url}}"></p>
 {% endif %}
+
 				<h2>{{p.title}}</h2>
 	{% autoescape on %}
 	{{p.content|linebreaks|truncatewords:50}}
 	{% endautoescape %}
 			<div class="clear"></div>
 			<p class="link-read-post"><a href="{{ p.get_absolute_url }}">Читать пост</a></p>
-
 			</li>
 	{% endfor %}
 </ul>
